--- a/src/main/resources/templates/domain/chat/chatRoom/list.html
+++ b/src/main/resources/templates/domain/chat/chatRoom/list.html
@@ -5,22 +5,10 @@
 </nav>
 
 <ul>
-    <li>
-        <a href="#">
-            <span>1번</span>
-            <span>공지방</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <span>2번</span>
-            <span>공부방</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <span>3번</span>
-            <span>잡담방</span>
+    <li th:each="chatRoom : ${chatRooms}">
+        <a th:href="${chatRoom.id}">
+            <span th:text="${chatRoom.id}"></span>
+            <span>[[${chatRoom.name}]]</span>
         </a>
     </li>
 </ul>
